# ml_utils

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  requirements.txt  setup.py
ml_utils/: augmentation.py  bbox_utils.cpp  bbox_utils.hpp  bbox_utils.py  boundingboxes.cpp  data_utils.py  prediction_filtering.cpp  prediction_filtering.hpp  prediction_filtering.py  sequence.py  typedefs.hpp  vis_utils.py
ml_utils/data/: __init__.py  augmentation.py  misc.py  pascal.py
ml_utils/torch/: detector.py  modules.py
ml_utils/torch/modules/: backbones.py
tests/: test_boundingboxes.py  test_data_misc.py  test_prediction_filtering.py  test_sequence.py  test_torch_modules.py
